--- a/female-diabetes-prediction/logistic-regression-approach.ipynb
+++ b/female-diabetes-prediction/logistic-regression-approach.ipynb
@@ -870,6 +870,53 @@
    "source": [
     "regressor.coef_"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = regressor.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Actual  Predicted\n",
+      "668       0          0\n",
+      "324       0          0\n",
+      "624       0          0\n",
+      "690       0          0\n",
+      "473       0          0\n",
+      "..      ...        ...\n",
+      "355       1          1\n",
+      "534       0          0\n",
+      "344       0          0\n",
+      "296       1          0\n",
+      "462       0          0\n",
+      "\n",
+      "[154 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = pd.DataFrame({'Actual': y_test, 'Predicted': y_pred})\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
