--- a/female-diabetes-prediction/logistic-regression-approach.ipynb
+++ b/female-diabetes-prediction/logistic-regression-approach.ipynb
@@ -917,6 +917,80 @@
     "result = pd.DataFrame({'Actual': y_test, 'Predicted': y_pred})\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error: 0.25\n",
+      "Mean Squared Error: 0.25\n",
+      "Root Mean Squared Error: 0.50\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "\n",
+    "MAE = mean_absolute_error(y_test, y_pred)\n",
+    "MSE = mean_squared_error(y_test, y_pred)\n",
+    "RMSE = np.sqrt(MSE)\n",
+    "\n",
+    "print(f'Mean Absolute Error: {MAE:.2f}')\n",
+    "print(f'Mean Squared Error: {MSE:.2f}')\n",
+    "print(f'Root Mean Squared Error: {RMSE:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7467532467532467"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regressor.score(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7703583061889251"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regressor.score(x_train, y_train)"
+   ]
   }
  ],
  "metadata": {
