--- a/female-diabetes-prediction/neural-network-approach.ipynb
+++ b/female-diabetes-prediction/neural-network-approach.ipynb
@@ -171,6 +171,45 @@
    "source": [
     "df.head(5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_column = \"diabetes\"\n",
+    "numerical_column = df.columns.drop(target_column)\n",
+    "output_rows = df[target_column]\n",
+    "df.drop(target_column,axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(df)\n",
+    "t_df = scaler.transform(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(t_df, output_rows, test_size=0.25, random_state=0)\n"
+   ]
   }
  ],
  "metadata": {
