--- a/female-diabetes-prediction/neural-network-approach.ipynb
+++ b/female-diabetes-prediction/neural-network-approach.ipynb
@@ -981,6 +981,43 @@
    "source": [
     "model.fit(x_train, y_train, epochs=300)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m6/6\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.7970 - loss: 0.8291  \n",
+      "[0.8213353753089905, 0.7760416865348816]\n",
+      "Loss =  0.8213353753089905\n",
+      "Accuracy =  0.7760416865348816\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss_and_metrics = model.evaluate(x_test, y_test)\n",
+    "print(loss_and_metrics)\n",
+    "print('Loss = ',loss_and_metrics[0])\n",
+    "print('Accuracy = ',loss_and_metrics[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
