--- a/Spam Classification/spam-classification.ipynb
+++ b/Spam Classification/spam-classification.ipynb
@@ -654,6 +654,156 @@
    "source": [
     "dataset.head(5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing Tasks\n",
+    "- Lower Case\n",
+    "- Tokenization\n",
+    "- Removing special characters\n",
+    "- Removing stopwords and punctuations\n",
+    "- Stemming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "def clean_text(text):\n",
+    "    text = text.lower()\n",
+    "    text = nltk.word_tokenize(text)\n",
+    "\n",
+    "    y = []\n",
+    "    for i in text:\n",
+    "        if i.isalnum():\n",
+    "            y.append(i)\n",
+    "\n",
+    "    text = y[:]\n",
+    "    y.clear()\n",
+    "\n",
+    "    for i in text:\n",
+    "        if i not in stopwords.words('english') and i not in string.punctuation:\n",
+    "            y.append(i)\n",
+    "\n",
+    "    text = y[:]\n",
+    "    y.clear()\n",
+    "\n",
+    "    for i in text:\n",
+    "        y.append(ps.stem(i))\n",
+    "\n",
+    "    return \" \".join(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset['sms_cleaned'] = dataset['sms'].apply(clean_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>sms</th>\n",
+       "      <th>Length</th>\n",
+       "      <th>sms_cleaned</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
+       "      <td>111</td>\n",
+       "      <td>go jurong point crazi avail bugi n great world...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Ok lar... Joking wif u oni...</td>\n",
+       "      <td>29</td>\n",
+       "      <td>ok lar joke wif u oni</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
+       "      <td>155</td>\n",
+       "      <td>free entri 2 wkli comp win fa cup final tkt 21...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>U dun say so early hor... U c already then say...</td>\n",
+       "      <td>49</td>\n",
+       "      <td>u dun say earli hor u c alreadi say</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
+       "      <td>61</td>\n",
+       "      <td>nah think goe usf live around though</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  class                                                sms  Length  \\\n",
+       "0   ham  Go until jurong point, crazy.. Available only ...     111   \n",
+       "1   ham                      Ok lar... Joking wif u oni...      29   \n",
+       "2  spam  Free entry in 2 a wkly comp to win FA Cup fina...     155   \n",
+       "3   ham  U dun say so early hor... U c already then say...      49   \n",
+       "4   ham  Nah I don't think he goes to usf, he lives aro...      61   \n",
+       "\n",
+       "                                         sms_cleaned  \n",
+       "0  go jurong point crazi avail bugi n great world...  \n",
+       "1                              ok lar joke wif u oni  \n",
+       "2  free entri 2 wkli comp win fa cup final tkt 21...  \n",
+       "3                u dun say earli hor u c alreadi say  \n",
+       "4               nah think goe usf live around though  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.head(5)"
+   ]
   }
  ],
  "metadata": {
