--- a/Spam Classification/spam-classification.ipynb
+++ b/Spam Classification/spam-classification.ipynb
@@ -911,6 +911,40 @@
    "source": [
     "model.fit(x_train, y_train)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "y_pred = model.predict(x_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9709864603481625\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy_score(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
