--- a/flood-prediction/linear-regresssion.ipynb
+++ b/flood-prediction/linear-regresssion.ipynb
@@ -659,6 +659,421 @@
    "source": [
     "plt.plot(train_data['FloodProbability'], train_data['RiverManagement'], 'ro')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = train_data[['id', 'MonsoonIntensity', 'TopographyDrainage', 'RiverManagement',\t'Deforestation', 'Urbanization', 'ClimateChange', 'DamsQuality', 'Siltation',\t'AgriculturalPractices', 'DrainageSystems',\t'CoastalVulnerability', 'Landslides',\t'Watersheds', 'DeterioratingInfrastructure', 'PopulationScore', 'WetlandLoss',\t'InadequatePlanning', 'PoliticalFactors']]\n",
+    "\n",
+    "y = train_data['FloodProbability']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>MonsoonIntensity</th>\n",
+       "      <th>TopographyDrainage</th>\n",
+       "      <th>RiverManagement</th>\n",
+       "      <th>Deforestation</th>\n",
+       "      <th>Urbanization</th>\n",
+       "      <th>ClimateChange</th>\n",
+       "      <th>DamsQuality</th>\n",
+       "      <th>Siltation</th>\n",
+       "      <th>AgriculturalPractices</th>\n",
+       "      <th>DrainageSystems</th>\n",
+       "      <th>CoastalVulnerability</th>\n",
+       "      <th>Landslides</th>\n",
+       "      <th>Watersheds</th>\n",
+       "      <th>DeterioratingInfrastructure</th>\n",
+       "      <th>PopulationScore</th>\n",
+       "      <th>WetlandLoss</th>\n",
+       "      <th>InadequatePlanning</th>\n",
+       "      <th>PoliticalFactors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1117952</th>\n",
+       "      <td>1117952</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1117953</th>\n",
+       "      <td>1117953</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1117954</th>\n",
+       "      <td>1117954</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1117955</th>\n",
+       "      <td>1117955</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1117956</th>\n",
+       "      <td>1117956</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1117957 rows × 19 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              id  MonsoonIntensity  TopographyDrainage  RiverManagement  \\\n",
+       "0              0                 5                   8                5   \n",
+       "1              1                 6                   7                4   \n",
+       "2              2                 6                   5                6   \n",
+       "3              3                 3                   4                6   \n",
+       "4              4                 5                   3                2   \n",
+       "...          ...               ...                 ...              ...   \n",
+       "1117952  1117952                 3                   3                4   \n",
+       "1117953  1117953                 2                   2                4   \n",
+       "1117954  1117954                 7                   3                9   \n",
+       "1117955  1117955                 7                   3                3   \n",
+       "1117956  1117956                 4                   5                6   \n",
+       "\n",
+       "         Deforestation  Urbanization  ClimateChange  DamsQuality  Siltation  \\\n",
+       "0                    8             6              4            4          3   \n",
+       "1                    4             8              8            3          5   \n",
+       "2                    7             3              7            1          5   \n",
+       "3                    5             4              8            4          7   \n",
+       "4                    6             4              4            3          3   \n",
+       "...                ...           ...            ...          ...        ...   \n",
+       "1117952             10             4              5            5          7   \n",
+       "1117953              3             9              5            8          1   \n",
+       "1117954              4             6              5            9          1   \n",
+       "1117955              7             5              2            3          4   \n",
+       "1117956              9             5              5            2          8   \n",
+       "\n",
+       "         AgriculturalPractices  DrainageSystems  CoastalVulnerability  \\\n",
+       "0                            3                5                     3   \n",
+       "1                            4                7                     2   \n",
+       "2                            4                7                     3   \n",
+       "3                            6                2                     4   \n",
+       "4                            3                2                     2   \n",
+       "...                        ...              ...                   ...   \n",
+       "1117952                     10                7                     8   \n",
+       "1117953                      3                9                     4   \n",
+       "1117954                      3                5                     5   \n",
+       "1117955                      6                6                     8   \n",
+       "1117956                      4                4                     8   \n",
+       "\n",
+       "         Landslides  Watersheds  DeterioratingInfrastructure  PopulationScore  \\\n",
+       "0                 3           5                            4                7   \n",
+       "1                 0           3                            5                3   \n",
+       "2                 7           5                            6                8   \n",
+       "3                 7           4                            4                6   \n",
+       "4                 6           6                            4                1   \n",
+       "...             ...         ...                          ...              ...   \n",
+       "1117952           7           2                            2                1   \n",
+       "1117953           4           3                            7                4   \n",
+       "1117954           5           5                            6                5   \n",
+       "1117955           5           3                            4                6   \n",
+       "1117956           6           5                            5                6   \n",
+       "\n",
+       "         WetlandLoss  InadequatePlanning  PoliticalFactors  \n",
+       "0                  5                   7                 3  \n",
+       "1                  3                   4                 3  \n",
+       "2                  2                   3                 3  \n",
+       "3                  5                   7                 5  \n",
+       "4                  2                   3                 5  \n",
+       "...              ...                 ...               ...  \n",
+       "1117952            4                   6                 4  \n",
+       "1117953            9                   4                 5  \n",
+       "1117954            5                   2                 4  \n",
+       "1117955            7                   6                 4  \n",
+       "1117956            7                   7                 8  \n",
+       "\n",
+       "[1117957 rows x 19 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          0.445\n",
+       "1          0.450\n",
+       "2          0.530\n",
+       "3          0.535\n",
+       "4          0.415\n",
+       "           ...  \n",
+       "1117952    0.495\n",
+       "1117953    0.480\n",
+       "1117954    0.485\n",
+       "1117955    0.495\n",
+       "1117956    0.560\n",
+       "Name: FloodProbability, Length: 1117957, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
   }
  ],
  "metadata": {
