--- a/flood-prediction/linear-regresssion.ipynb
+++ b/flood-prediction/linear-regresssion.ipynb
@@ -1772,6 +1772,33 @@
     "x_test = test_data[['id', 'MonsoonIntensity', 'TopographyDrainage', 'RiverManagement',\t'Deforestation', 'Urbanization', 'ClimateChange', 'DamsQuality', 'Siltation',\t'AgriculturalPractices', 'DrainageSystems',\t'CoastalVulnerability', 'Landslides',\t'Watersheds', 'DeterioratingInfrastructure', 'PopulationScore', 'WetlandLoss',\t'InadequatePlanning', 'PoliticalFactors']]\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = regressor.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = pd.DataFrame({'id': x_test['id'], 'FloodProbability': y_pred})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.to_csv('./submission.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
